PR fortran/33626 fortran/ * resolve.c (resolve_operator): Always copy the type for expressions in parentheses. testsuite/ * gfortran.dg/parens_6.f90: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129002 138bc75d-0d04-0410-961f-82ee72b054a4